@@ -50,15 +50,22 @@ namespace KXMLCore {
         T *operator->() const { return m_ptr; }
         
         bool operator!() const { return m_ptr == NULL; }
-        operator bool() const { return m_ptr != NULL; }
+
+    
+        // this type conversion operator allows implicit conversion to
+        // bool but not to other integer types
+
+        typedef T * (SharedPtr::*UnspecifiedBoolType)() const;
+        operator UnspecifiedBoolType() const
+        {
+            return m_ptr ? &SharedPtr::get : 0;
+        }
         
         SharedPtr &operator=(const SharedPtr &);
         SharedPtr &operator=(T *);
         
     private:
         T *m_ptr;
-        
-        operator int() const; // deliberately not implemented; helps prevent operator bool from converting to int accidentally
     };
     
     template <class T> SharedPtr<T> &SharedPtr<T>::operator=(const SharedPtr<T> &o) 
